import { beforeEach, expect, vi } from 'bun:test'
import { describe, it } from 'bun:test'
import { $, s } from '../../_/helpers.js'
import { createState, environmentManager } from '../__helpers__.js'

const output = createState<string>({
  value: (values) => values.join(``),
})

const onOutput = output.set

let args

beforeEach(() => {
  vi.spyOn(process, 'exit').mockImplementation(() => undefined as never)
})

it(`can be disabled`, () => {
  args = $.parameter(`--foo`, s)
    .settings({ parameters: { environment: { $default: { prefix: false } } } })
    .parse({ line: [], environment: { foo: `bar` } })
  expect(args).toMatchObject({ foo: `bar` })
})
it(`can be customized to a different prefix`, () => {
  args = $.parameter(`--foo`, s)
    .settings({ parameters: { environment: { $default: { prefix: `FOO` } } } })
    .parse({ line: [], environment: { FOO_foo: `bar` } })
  expect(args).toMatchObject({ foo: `bar` })
})
it(`can be customized to multiple accepted different prefixes`, () => {
  args = $.parameter(`--foo`, s)
    .parameter(`--bar`, s)
    .settings({ parameters: { environment: { $default: { prefix: [`FOO`, `BAR`] } } } })
    .parse({ line: [], environment: { FOO_foo: `qux1`, BAR_bar: `qux2` } })
  expect(args).toMatchObject({ foo: `qux1`, bar: `qux2` })
})
it(`defaults to CLI_PARAM or CLI_PARAMETERS`, () => {
  args = $.parameter(`--foo`, s)
    .parameter(`--bar`, s)
    .parse({
      line: [],
      environment: {
        cli_param_foo: `qux1`,
        cli_parameter_bar: `qux2`,
      },
    })
  expect(args).toMatchObject({ foo: `qux1`, bar: `qux2` })
})
describe(`error`, () => {
  it(`when using prefix and there is a typo`, () => {
    // TODO show not just envar prefix in error message json
    $.parameter(`--foo`, s)
      .settings({ helpOnNoArguments: false, onOutput })
      .parse({ line: [], environment: { cli_param_bar: `qux1` } })
    expect([[output.value]]).toMatchSnapshot()
  })
  it(`when using multiple prefixes and args passed for all param variations`, () => {
    // TODO show not just envar prefix in error message json
    $.parameter(`--foo`, s)
      .parameter(`--bar`, s)
      .settings({ onOutput })
      .parse({
        line: [],
        environment: {
          cli_param_bar: `qux1`,
          cli_parameter_bar: `qux2`,
          cli_param_foo: `qux1`,
          cli_parameter_foo: `qux2`,
        },
      })
    expect([[output.value]]).toMatchSnapshot()
  })
  it.todo(`when argument collision and typo then both errors are shown`, () => {})
})

describe(`default environment argument parameter name prefix`, () => {
  beforeEach(() => environmentManager.set(`CLI_SETTINGS_READ_ARGUMENTS_FROM_ENVIRONMENT`, `true`))

  // TODO(bun-test-migration): Cross-file shared `$` builder state leaks under
  // bun:test's single-process model. See selective/toggling.spec.ts.
  it.skip(`argument can be passed by CLI_PARAMETER prefix`, () => {
    environmentManager.set(`cli_parameter_foo`, `bar`)
    args = $.parameter(`--foo`, s).parse({ line: [] })
    expect(args).toMatchObject({ foo: `bar` })
  })
  // TODO(bun-test-migration): see comment above.
  it.skip(`argument can be passed by CLI_PARAM prefix`, () => {
    environmentManager.set(`cli_param_foo`, `bar`)
    args = $.parameter(`--foo`, s).parse({ line: [] })
    expect(args).toMatchObject({ foo: `bar` })
  })
  it(`when both argument CLI_PARAM and CLI_PARAMETER are passed then an error is thrown`, () => {
    environmentManager.set(`cli_param_foo`, `bar1`)
    environmentManager.set(`cli_parameter_foo`, `bar2`)
    $.parameter(`--foo`, s).settings({ helpOnNoArguments: false, onOutput }).parse({ line: [] })
    expect([[output.value]]).toMatchSnapshot()
  })
})
