// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`error when using prefix and there is a typo 1`] = `
[
  [
    
"Cannot run command, you made some mistakes:

Missing argument for flag "foo".

Here are the docs for this command:


PARAMETERS

  \x1B[4m\x1B[90mName\x1B[39m\x1B[24m    \x1B[4m\x1B[90mType\x1B[39m\x1B[24m      \x1B[4m\x1B[90mDefault\x1B[39m\x1B[24m       \x1B[4m\x1B[90mEnvironment (1)\x1B[39m\x1B[24m  
                                                   
  \x1B[1m\x1B[32mfoo\x1B[39m\x1B[22m     \x1B[34mstring\x1B[39m    \x1B[1m\x1B[30m\x1B[101m REQUIRED \x1B[49m\x1B[39m\x1B[22m    \x1B[34m✓\x1B[39m                
                                                   
  \x1B[2m\x1B[90m     \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90mNOTES\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m━━━━━\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m(1) Parameters can be passed arguments via environment variables. Command\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    line arguments take precedence. Environment variable names are snake \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    cased versions of the parameter name (or its aliases), case          \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    insensitive. They must be prefixed with \x1B[34mCLI_PARAMETER_\x1B[90m or \x1B[34mCLI_PARAM_\x1B[90m \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    (case insensitive). Examples:                                        \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    → \x1B[34mCLI_PARAMETER_\x1B[90m\x1B[32mFOO\x1B[90m="..."                                            \x1B[39m\x1B[22m  
"
,
  ],
]
`;

exports[`error when using multiple prefixes and args passed for all param variations 1`] = `
[
  [
    
"Cannot run command, you made some mistakes:

The parameter "foo" was passed an argument multiple times via different parameter aliases in the environment.
X The parameter "bar" was passed an argument multiple times via different parameter aliases in the environment.

Here are the docs for this command:


PARAMETERS

  \x1B[4m\x1B[90mName\x1B[39m\x1B[24m    \x1B[4m\x1B[90mType\x1B[39m\x1B[24m      \x1B[4m\x1B[90mDefault\x1B[39m\x1B[24m       \x1B[4m\x1B[90mEnvironment (1)\x1B[39m\x1B[24m  
                                                   
  \x1B[1m\x1B[32mbar\x1B[39m\x1B[22m     \x1B[34mstring\x1B[39m    \x1B[1m\x1B[30m\x1B[101m REQUIRED \x1B[49m\x1B[39m\x1B[22m    \x1B[34m✓\x1B[39m                
                                                   
  \x1B[1m\x1B[32mfoo\x1B[39m\x1B[22m     \x1B[34mstring\x1B[39m    \x1B[1m\x1B[30m\x1B[101m REQUIRED \x1B[49m\x1B[39m\x1B[22m    \x1B[34m✓\x1B[39m                
                                                   
  \x1B[2m\x1B[90m     \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90mNOTES\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m━━━━━\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m(1) Parameters can be passed arguments via environment variables. Command\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    line arguments take precedence. Environment variable names are snake \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    cased versions of the parameter name (or its aliases), case          \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    insensitive. They must be prefixed with \x1B[34mCLI_PARAMETER_\x1B[90m or \x1B[34mCLI_PARAM_\x1B[90m \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    (case insensitive). Examples:                                        \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    → \x1B[34mCLI_PARAMETER_\x1B[90m\x1B[32mBAR\x1B[90m="..."                                            \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    → \x1B[34mCLI_PARAMETER_\x1B[90m\x1B[32mFOO\x1B[90m="..."                                            \x1B[39m\x1B[22m  
"
,
  ],
]
`;

exports[`default environment argument parameter name prefix when both argument CLI_PARAM and CLI_PARAMETER are passed then an error is thrown 1`] = `
[
  [
    
"Cannot run command, you made some mistakes:

The parameter "foo" was passed an argument multiple times via different parameter aliases in the environment.

Here are the docs for this command:


PARAMETERS

  \x1B[4m\x1B[90mName\x1B[39m\x1B[24m    \x1B[4m\x1B[90mType\x1B[39m\x1B[24m      \x1B[4m\x1B[90mDefault\x1B[39m\x1B[24m       \x1B[4m\x1B[90mEnvironment (1)\x1B[39m\x1B[24m  
                                                   
  \x1B[1m\x1B[32mfoo\x1B[39m\x1B[22m     \x1B[34mstring\x1B[39m    \x1B[1m\x1B[30m\x1B[101m REQUIRED \x1B[49m\x1B[39m\x1B[22m    \x1B[34m✓\x1B[39m                
                                                   
  \x1B[2m\x1B[90m     \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90mNOTES\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m━━━━━\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m(1) Parameters can be passed arguments via environment variables. Command\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    line arguments take precedence. Environment variable names are snake \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    cased versions of the parameter name (or its aliases), case          \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    insensitive. They must be prefixed with \x1B[34mCLI_PARAMETER_\x1B[90m or \x1B[34mCLI_PARAM_\x1B[90m \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    (case insensitive). Examples:                                        \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    → \x1B[34mCLI_PARAMETER_\x1B[90m\x1B[32mFOO\x1B[90m="..."                                            \x1B[39m\x1B[22m  
"
,
  ],
]
`;
